# Luma

./: .env.example  .gitignore  README.md  WORKING_STATUS.md  pyproject.toml
content-gen/: .eslintrc.json  package.json  pnpm-lock.yaml
content-gen/app/: globals.css  layout.tsx  page.tsx
content-gen/app/login/: page.tsx
content-gen/app/signup/: page.tsx
content-gen/components/: api-config.tsx  audio-generation.tsx  audio-library.tsx  creatomate-render.tsx  error-boundary.tsx  features.tsx  file-download-button.tsx  hero.tsx  image-to-video.tsx  loading-skeleton.tsx  longform-scenes.tsx  progress-tracker.tsx  status-badge.tsx  testimonials.tsx  video-generation.tsx
content-gen/components/home/: hero.tsx
content-gen/hooks/: use-polling.ts
content-gen/lib/: error-handler.ts  file-utils.ts
src/: main.py
src/api/v1/: api.py
src/api/v1/routers/: creatomate_route.py  elevenlabs_gen.py  elevenlabs_route.py  freepik_route.py  heygen.py  heygen_route.py  longform_route.py
src/config/: config.py
src/controllers/: creatomate.py  elevenlabs.py  freepik.py  generate_audio.py  generate_video.py  heygen.py  longform_scenes.py
src/models/: creatomate.py  elevenlabs.py  elevenlabs_model.py  freepik_model.py  heygen.py  longform.py
src/prompts/: creatomate_prompt.md  elevenlabs_longform_prompt.md  elevenlabs_prompt.md  freepik_prompt.md  heygen_avatar_prompt.md  heygen_prompt.md  longform_clause_prompt.md  longform_sanitizer_prompt.md  longform_segmentation_prompt.md  longform_splice_prompt.md
src/utils/: agents.py  audio_analysis.py
