[project]
name = "innerbhakti-video-generation-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elevenlabs>=2.18.0",
    "fastapi[standard]>=0.119.0",
    "pydantic>=2.12.0,<2.13.0",
    "pydantic-ai>=1.0.17",
    "pydantic-settings>=2.6.0,<2.11.0",
    "pydub>=0.25.1",
    "openai>=1.51.0",
    "audioop-lts>=0.2.0",
    "webrtcvad>=2.0.10",
    "setuptools>=70.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[tool.ruff]
# Target Python 3.13+
target-version = "py313"

# Include the src directory
include = ["src/**/*.py"]

# Line length
line-length = 100

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
]

# Ignore specific rules if needed
ignore = []

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["src"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Use spaces for indentation
indent-style = "space"
